Sat Jan 11 17:30:24 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	All this stuff modified from a patch of  Viktar Klimkovitch
	* src/odbc/convert_sql2string.c src/odbc/convert_sql2string.h:
	* src/odbc/convert_tds2sql.c:
	- do not mix sql type to c type
	- some comment added
	- renamed _odbc_get_server_type to odbc_get_server_type
	* src/odbc/error.c: cleanup
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/odbc_util.h:
	- renamed odbc_get_client_type to odbc_tds_to_sql_type and 
	  add version parameter
	- check if sql2tds fail
	- more support for SQLGetStmtAttr
	- some other options for SQLGetInfo (we do not support cursors)
	- move sql_to_c_type_default from odbc.c to odbc_util.c
	- reindented
	* src/odbc/sql2tds.c:
	- handle sql type correctly (not as c type)
	- sql2tds return same errors of tds_convert

Fri Jan 10 21:04:22 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/tds/login.c:
	- some comment added
	* src/tds/query.c:
	- allow params in tds_submit_rpc to be NULL

Fri Jan 10 13:09:26 EST 2003    JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c  Bill's varchar patch, see ML
	* src/dblib/dblib.c log marker in hex format, not decimal.

Fri Jan 10 13:24:37 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix stupid bug

Fri Jan 10 10:25:36 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/odbc_util.c:
	- return SQL_REAL for SYBREAL, not SQL_FLOAT
	- other small type handling
	- some docs update

Thu Jan  9 18:12:43 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/convert_tds2sql.c:
	* src/odbc/odbc.c src/odbc/unittests/date.c:
	- fix problem with SQL_C_TIMESTAMP

Thu Jan  9 16:17:10 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/date.c(added):
	- added test for date under ODBC (do not pass...)
